--- a/lab_4.ipynb
+++ b/lab_4.ipynb
@@ -142,6 +142,15 @@
     "    V, policy = gambler_value_iteration()\n",
     "    plot_results(V, policy)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(num_episodes)"
+   ]
   }
  ],
  "metadata": {
